[project]
name = "hass-ryse"
version = "1.0.33"
description = "RYSE SmartShade Bluetooth integration for Home Assistant"
requires-python = ">=3.12"

[tool.setuptools.packages.find]
include = ["custom_components*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 120
